--- a/templates/demo.html
+++ b/templates/demo.html
@@ -386,7 +386,7 @@
 
         <div id="loading" class="loading">
             <div class="spinner"></div>
-            <p>Analyzing your plant images using AI...</p>
+            <p>Analyzing your plant images</p>
         </div>
 
         <div id="results" class="results">
